fix overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -732,14 +732,11 @@ video {
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
-.mt-2 {
-	margin-top: 0.5rem;
-}
-.mb-4 {
-	margin-bottom: 1rem;
-}
 .mb-6 {
 	margin-bottom: 1.5rem;
+}
+.mt-2 {
+	margin-top: 0.5rem;
 }
 .box-border {
 	box-sizing: border-box;
@@ -816,9 +813,6 @@ video {
 .hidden {
 	display: none;
 }
-.h-60 {
-	height: 15rem;
-}
 .h-16 {
 	height: 4rem;
 }
@@ -836,6 +830,15 @@ video {
 }
 .h-4 {
 	height: 1rem;
+}
+.min-h-\[60\] {
+	min-height: 60;
+}
+.min-h-\[60rem\] {
+	min-height: 60rem;
+}
+.min-h-\[15rem\] {
+	min-height: 15rem;
 }
 .w-11\/12 {
 	width: 91.666667%;
